[gd_scene load_steps=7 format=1]

[ext_resource path="res://Textures/Backgrounds/Envblank.png" type="Texture" id=1]
[ext_resource path="res://Scenes/HomeA.gd" type="Script" id=2]
[ext_resource path="res://Textures/Buttons/arrow_kitchen.png" type="Texture" id=3]
[ext_resource path="res://Textures/Buttons/arrow_room.png" type="Texture" id=4]
[ext_resource path="res://Textures/Buttons/arrow_garden.png" type="Texture" id=5]
[ext_resource path="res://Textures/Sprites/7.png" type="Texture" id=6]

[node name="TextureFrame" type="TextureFrame"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1280.0
margin/bottom = 960.0
texture = ExtResource( 1 )
stretch_mode = 0
script/script = ExtResource( 2 )

[node name="KitchenButton" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 680.0
margin/right = 280.0
margin/bottom = 960.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
params/resize_mode = 1
params/scale = Vector2( 0.25, 0.25 )
params/stretch_mode = 0

[node name="RoomButton" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 520.0
margin/top = 720.0
margin/right = 800.0
margin/bottom = 960.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
params/resize_mode = 1
params/scale = Vector2( 0.5, 0.5 )
params/stretch_mode = 0

[node name="GardenButton" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1040.0
margin/top = 720.0
margin/right = 1280.0
margin/bottom = 960.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )
params/resize_mode = 1
params/scale = Vector2( 0.5, 0.5 )
params/stretch_mode = 1

[node name="Clock" type="Sprite" parent="."]

transform/pos = Vector2( 1040, 80 )
transform/scale = Vector2( 0.383333, 0.45 )
texture = ExtResource( 6 )


